# voting-dapp

./: .gitignore  Cargo.toml  README.md  justfile  next.config.mjs  package-lock.json  package.json  tsconfig.json
.cargo/: config.toml
anchor/: Anchor.toml
anchor/programs/votingdapp/src/: error.rs  lib.rs
anchor/programs/votingdapp/src/instructions/: create_poll.rs  edit_poll.rs  mod.rs  vote.rs
anchor/programs/votingdapp/src/state/: candidate.rs  mod.rs  poll.rs  voter.rs
anchor/tests/: votingdapp.spec.ts
cli/: Cargo.toml
cli/.cargo/: config.toml
cli/src/: main.rs
client/: Cargo.toml  index.html
client/src/: backpack.rs  lib.rs  main.rs  phantom.rs
common/: Cargo.toml
common/src/: instruction.rs  lib.rs  state.rs
dapp/: Anchor.toml
dapp/programs/dapp/src/: lib.rs
dapp/tests/: dapp.ts
program/: Cargo.toml
program/src/: entrypoint.rs  lib.rs  processor.rs  state.rs
src/app/: layout.tsx
src/components/account/: account-detail-feature.tsx  account-ui.tsx
src/components/cluster/: cluster-feature.tsx  cluster-ui.tsx
src/components/dashboard/: dashboard-feature.tsx
src/components/ui/: ui-layout.tsx
src/components/votingdapp/: votingdapp-data-access.tsx  votingdapp-feature.tsx  votingdapp-ui.tsx
web/: Cargo.toml  config-overrides.js  index.html  package.json
web/.cargo/: config.toml
web/src/: App.js  config.js  index.js  lib.rs
web/src/components/: CreatePoll.js  Home.js  Poll.js
web/src/idl/: voting_app.json
