[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path = "../common" }
borsh = { version = "1.5.1", default-features = false, features = ["derive"] }
solana-client-wasm = { version = "1.18.0" }
solana-sdk = { version = "=1.18.0", default-features = false }
wasm-bindgen = { version = "0.2.99", default-features = false, features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.49", default-features = false }
console_error_panic_hook = "0.1.7"
serde-wasm-bindgen = { version = "0.6.5", default-features = false }
bs58 = { version = "0.5.1", default-features = false, features = ["alloc"] }
bincode = { version = "1.3.3", default-features = false }
serde_json = { version = "1.0.134", default-features = false }
