[package]
name = "voting-dapp"
version = "0.1.0"
edition = "2021"

[lib]
name = "dapp"
crate-type = ["cdylib", "lib"]

[dependencies]
common = { path = "../common" }
borsh = { version = "1.5.1", default-features = false, features = ["derive"] }
solana-program = { version = "2.1.6", default-features = false }
